--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/SourceLambda/interoperability_ms#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "soap": "^1.0.0",
-    "strong-soap": "^3.5.1"
+    "soap": "^1.0.0"
   }
 }
