--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,10 @@
   },
   "homepage": "https://github.com/SourceLambda/interoperability_ms#readme",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
-    "http-errors": "^2.0.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
     "soap": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
