--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/SourceLambda/interoperability_ms#readme",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "soap": "^1.0.0"
   },
